# storage_charge_newc

./: CMakeLists.txt  README.md  build.sh
storage_charge/: CMakeLists.txt  lease.c  lease.h  storage.c  storage.h  storage_factory.c  storage_factory.h  storage_test.cc  tenant.c  tenant.h  tenant_test.cc
storage_charge/block/: CMakeLists.txt  block_storage.c  block_storage.h  block_storage_test.cc
storage_charge/core/: CMakeLists.txt  lease.c  lease.h  storage.c  storage.h  storage_type.h  tenant.c  tenant.h  tenant_test.cc
storage_charge/factory/: storage_factory.c  storage_factory.h
storage_charge/file/: CMakeLists.txt  file_storage.c  file_storage.h  file_storage_test.cc
storage_charge/object/: CMakeLists.txt  object_storage.c  object_storage.h  object_storage_test.cc
storage_charge/registry/: CMakeLists.txt  storage_registry.c  storage_registry.h
storage_charge/test_all/: CMakeLists.txt  tenant_test.cc
storage_charge/test_single/: CMakeLists.txt  tenant_test.cc
